--- a/.github/workflows/semver-checks.yml
+++ b/.github/workflows/semver-checks.yml
@@ -12,7 +12,7 @@ on:
                 default: 'master'
 
 permissions:
-  pull-requests: write
+  pull-requests: read
 
 jobs:
   semver-checks:
@@ -26,17 +26,20 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha || github.ref }}
           path: PR_BRANCH
           fetch-depth: 0
+
       # Remove repo toolchain pin so we can specify toolchain manually
       - name: Remove toolchain pin
         run: rm -f rust-toolchain.toml rustup-toolchain.toml
+
       - name: Install stable toolchain
         uses: dtolnay/rust-toolchain@stable
+
       - name: Build caching
         uses: Swatinem/rust-cache@v2
 
       # Run cargo-semver-checks against the PR's target branch.
-      - name: Check semver
-        id: check-changes
+      - name: Check semver changes
+        id: semver
         uses: obi1kenobi/cargo-semver-checks-action@v2
         with:
           feature-group: all-features
@@ -45,87 +48,47 @@ jobs:
           release-type: minor
         continue-on-error: true
       
-      - name: Set breaking flag
-        id: set-breaking
+      - name: Evaluate semver result
         run: |
-          if [ "${{ steps.check-changes.outcome }}" == "failure" ]; then
-            echo "breaking=true" >> $GITHUB_OUTPUT
-            echo "semver_checks_diagnostic=${{ steps.check-changes.outputs.semver-checks-output }}" >> $GITHUB_OUTPUT
+          echo "=== cargo-semver-checks result ==="
+
+          if [ "${{ steps.semver.outcome }}" = "failure" ]; then
+            BREAKING=true
+            echo "❌ Breaking changes detected in public Rust API"
           else
-            echo "breaking=false" >> $GITHUB_OUTPUT
-            echo "semver_checks_diagnostic=${{ steps.check-changes.outputs.semver-checks-output }}" >> $GITHUB_OUTPUT
+            BREAKING=false
+            echo "✅ No breaking changes detected"
           fi
-      
-      # Check if the PR title contains a breaking change flag in its title,
-      # according to the conventional commits specification.
-      #
-      # When the PR is flagged as breaking we only post an informative comment
-      # instead of failing the workflow.
-      - name: Check for breaking change flag
-        if: ${{ github.event_name == 'pull_request' || github.event_name == 'pull_request_target' }}
-        id: breaking-pr
-        run: |
-          if [[ "${PR_TITLE}" =~ ^.*\!:.*$ ]]; then
-            echo "breaking=true" >> $GITHUB_OUTPUT
+
+          echo
+          echo "=== cargo-semver-checks summary ==="
+          echo
+          printf "%s\n" "${{ steps.semver.outputs.semver-checks-output }}"
+          echo
+
+          # Check PR title for conventional-commit breaking marker
+          if [[ "${{ github.event.pull_request.title }}" =~ ^.*\!:.*$ ]]; then
+            DECLARED=true
+            echo "ℹ️ PR title declares a breaking change (!)"
           else
-            echo "breaking=false" >> $GITHUB_OUTPUT
+            DECLARED=false
+            echo "ℹ️ PR title does NOT declare a breaking change"
           fi
-        env:
-          PR_TITLE: ${{ github.event.pull_request.title }}
 
-      # Debug step 
-      - run: |
-          echo "breaking: ${{ steps.set-breaking.outputs.breaking }}"
-          echo "breaking-pr: ${{ steps.breaking-pr.outputs.breaking }}"
+          echo
+          echo "=== Decision ==="
 
-      # Post a diagnostics comment if there are breaking changes and the PR has been marked as breaking.
-      - name: Post a comment about the breaking changes. PR marked as breaking.
-        if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && steps.set-breaking.outputs.breaking == 'true' && steps.breaking-pr.outputs.breaking == 'true' }}
-        uses: marocchino/sticky-pull-request-comment@v2
-        with:
-          header: rs-semver-checks
-          message: |
-            This PR contains breaking changes to the public Rust API.
+          if [ "$BREAKING" = true ] && [ "$DECLARED" = false ]; then
+            echo "🚨 ERROR: Undeclared breaking changes detected."
+            echo "Please deprecate the old API instead (if possible), or mark the PR with a `!` following the [conventional commits](https://www.conventionalcommits.org/en/v1.0.0/) format to indicate a breaking change."
+            exit 1
+          fi
 
-            <details>
-              <summary>cargo-semver-checks summary</summary>
-              
-              ```
-              ${{ steps.set-breaking.outputs.semver_checks_diagnostic }}
-              ```
-              
-            </details>
-          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
+          if [ "$BREAKING" = true ] && [ "$DECLARED" = true ]; then
+            echo "⚠️ Breaking changes detected but correctly declared."
+            echo "Workflow will succeed."
+          fi
 
-      # Post a help comment if there are breaking changes, and the PR hasn't been marked as breaking.
-      - name: Post a comment about the breaking changes. PR *not* marked as breaking.
-        if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && steps.set-breaking.outputs.breaking == 'true' && steps.breaking-pr.outputs.breaking == 'false' }}
-        uses: marocchino/sticky-pull-request-comment@v2
-        with:
-          header: rs-semver-checks
-          message: |
-            This PR contains breaking changes to the public Rust API.
-            Please deprecate the old API instead (if possible), or mark the PR with a `!` following the [conventional commits](https://www.conventionalcommits.org/en/v1.0.0/) format to indicate a breaking change.
-
-            <details>
-              <summary>cargo-semver-checks summary</summary>
-              
-              ```
-              ${{ steps.set-breaking.outputs.semver_checks_diagnostic }}
-              ```
-              
-            </details>
-          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
-      - name: Fail if there are undeclared breaking changes
-        if: ${{ steps.set-breaking.outputs.breaking == 'true' && steps.breaking-pr.outputs.breaking == 'false' }}
-        run: exit 1
-
-      # Delete previous comments when the issues have been resolved
-      # This step doesn't run if any of the previous checks fails.
-      - name: Delete previous comments
-        uses: marocchino/sticky-pull-request-comment@v2
-        if: ${{ (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') && steps.set-breaking.outputs.breaking == 'false' }}
-        with:
-          header: rs-semver-checks
-          delete: true
-          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
+          if [ "$BREAKING" = false ]; then
+            echo "✅ No breaking changes; workflow will succeed."
+          fi
