--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -10,6 +10,7 @@ rust-version.workspace = true
 [dependencies]
 foldhash  = { workspace = true, optional = true }
 hashbrown = { workspace = true, optional = true }
+petgraph-old = { workspace = true }
 
 [features]
 utils = ["dep:foldhash", "dep:hashbrown"]
