--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members  = ["crates/core", "crates/petgraph", "serialization-tests"]
+members  = ["crates/algorithms", "crates/core", "crates/petgraph", "serialization-tests"]
 resolver = "3"
 
 [workspace.package]
@@ -20,6 +20,7 @@ rust-version = "1.91"
 [workspace.dependencies]
 petgraph      = { path = "crates/petgraph" }
 petgraph-core = { path = "crates/core" }
+petgraph-algorithms = { path = "crates/algorithms" }
 
 ahash             = { version = "0.7.2", default-features = false }
 bincode           = { version = "1.3.3", default-features = false }
