--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,6 @@
 on:
+  push:
+    branches: [ master ]
   pull_request:
     branches: [ '*' ]
   merge_group:
@@ -7,43 +9,55 @@ on:
 
 name: Continuous integration
 
+env:
+  CARGO_TERM_COLOR: always
+  CARGO_INCREMENTAL: 0
+  SCCACHE_GHA_ENABLED: "true"
+  RUSTC_WRAPPER: "sccache"
+
 jobs:
   tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        crate: [petgraph, petgraph-core, petgraph-serialization-tests]
-        rust: [stable, beta, nightly]
         include:
+          - rust: 1.64.0  # MSRV
+            required_features: std
+          - rust: 1.81.0  # no_std MSRV
+          - rust: stable
+            features: unstable quickcheck rayon
+            test_all: --all
+          - rust: beta
+            test_all: --all
           - rust: nightly
+            features: unstable quickcheck rayon
+            test_all: --all
             bench: true
-            
-    name: Tests ${{ matrix.crate }} (Rust ${{ matrix.rust }})
+    name: Tests (Rust ${{ matrix.rust }})
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-      # Remove repo toolchain pin so we can specify toolchain manually
-      - name: Remove toolchain pin
-        run: rm -f rust-toolchain.toml rustup-toolchain.toml
-      - name: Install Rust ${{ matrix.rust }}
+      - uses: actions/checkout@v4
+      - uses: mozilla-actions/sccache-action@v0.0.8
+      - name: Lock MSRV-compatible dependencies
+        if: matrix.rust == '1.64.0'
+        env:
+          CARGO_RESOLVER_INCOMPATIBLE_RUST_VERSIONS: fallback
+        # Note that this uses the runner's pre-installed stable cargo
+        run: cargo generate-lockfile
+      - id: toolchain
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
-      - name: Install cargo-nextest
-        uses: taiki-e/install-action@v2
-        with:
-          tool: cargo-nextest
 
-      - name: Build caching
-        uses: Swatinem/rust-cache@v2
+      - name: Build with no features
+        run: cargo build --verbose --no-default-features --features "${{ matrix.required_features }}"
+      - name: Test with no features
+        run: cargo test --verbose --no-default-features --features "${{ matrix.required_features }}"
 
-      - name: Build and test
-        run: |
-          # Run tests with default and all features. Powerset of features is only tested on merge
-          # or with the S-run-thorough-ci-tests label to save CI resources.
-          cargo nextest run --package ${{ matrix.crate }} --verbose
-          cargo nextest run --package ${{ matrix.crate }} --all-features --verbose
+      - name: Build with features "${{ matrix.features }}"
+        run: cargo build --verbose --features "${{ matrix.features }}" --features "${{ matrix.required_features }}"
+      - name: Test with features "${{ matrix.features }}"
+        run: cargo test ${{ matrix.test_all }} --verbose --features "${{ matrix.features }}" --features "${{ matrix.required_features }}"
 
       - name: Build benchmarks
         if: ${{ matrix.bench }}
@@ -51,22 +65,17 @@ jobs:
           cargo bench --verbose --no-run
           cargo bench --verbose --no-run --all-features
 
-  lints:
+  check:
     name: Lints
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-      - name: Setup just
-        uses: extractions/setup-just@v3
-      - name: Install nightly toolchain
-        uses: dtolnay/rust-toolchain@master
+      - uses: actions/checkout@v4
+      - uses: mozilla-actions/sccache-action@v0.0.8
+      - uses: extractions/setup-just@v3
+      - name: Install stable toolchain
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: nightly
           components: rustfmt, clippy
-
-      - name: Build caching
-        uses: Swatinem/rust-cache@v2
 
       - name: Check formatting
         run: just fmt
@@ -85,25 +94,48 @@ jobs:
     name: Check no_std
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-      # Remove repo toolchain pin so we can specify toolchain manually
-      - name: Remove toolchain pin
-        run: rm -f rust-toolchain.toml rustup-toolchain.toml
-      - name: Setup just
-        uses: extractions/setup-just@v3
+      - uses: actions/checkout@v4
+      # Remove repo toolchain pin so rustup won't use nightly
+      - run: rm -f rust-toolchain.toml rustup-toolchain.toml
+      - uses: mozilla-actions/sccache-action@v0.0.8
+      - uses: extractions/setup-just@v3
       - name: Install stable toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt, clippy
           targets: wasm32v1-none
-      - name: Install cargo-nextest
-        uses: taiki-e/install-action@v2
-        with:
-          tool: cargo-nextest
-
-      - name: Build caching
-        uses: Swatinem/rust-cache@v2
 
       - name: Check
         run: just check-no-std
+
+  # fast-miri:
+  #   # This job runs on pull_request without the `S-run-thorough-ci-tests` label.
+  #   name: Unsoundness check fast
+  #   if: ${{ github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'S-run-thorough-ci-tests') }}
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: mozilla-actions/sccache-action@v0.0.8
+  #     - uses: extractions/setup-just@v3
+  #     - uses: dtolnay/rust-toolchain@nightly
+  #       with:
+  #         components: miri
+  #     - uses: taiki-e/install-action@v2
+  #       with:
+  #         tool: nextest
+  #     # Exclude some tests from fast-miri, as they take very long to run. thorough-miri includes all tests without nextest.
+  #     - run: just miri-fast
+
+  # thorough-miri:
+  #   # This job runs on push and pull_request with the `S-run-thorough-ci-tests` label.
+  #   name: Unsoundness check thorough
+  #   if: ${{ github.event_name == 'push' || (github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'S-run-thorough-ci-tests')) }}
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: mozilla-actions/sccache-action@v0.0.8
+  #     - uses: extractions/setup-just@v3
+  #     - uses: dtolnay/rust-toolchain@nightly
+  #       with:
+  #         components: miri
+  #     - run: just miri
