--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: mozilla-actions/sccache-action@v0.0.8
       - name: Lock MSRV-compatible dependencies
-        if: matrix.rust == '1.64.0'
+        if: matrix.rust == '1.64.0' || matrix.rust == '1.81.0'
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+      - if: matrix.rust == '1.64.0' || matrix.rust == '1.81.0'
         env:
           CARGO_RESOLVER_INCOMPATIBLE_RUST_VERSIONS: fallback
         # Note that this uses the runner's pre-installed stable cargo
