feat: Implement new traits on MatrixGraph

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ rust-version = "1.91"
 petgraph      = { path = "crates/petgraph" }
 petgraph-core = { path = "crates/core" }
 
-petgraph-old      = { git = "https://github.com/petgraph/petgraph", branch = "rl/impl_display_for_nodeindex", package = "petgraph" }
+petgraph-old      = { git = "https://github.com/petgraph/petgraph", branch = "rl/0.8/expose_mut_weight_iters", package = "petgraph" }
 
 ahash             = { version = "0.7.2", default-features = false }
 bincode           = { version = "1.3.3", default-features = false }
