ci: Change actions to run only on changes with respect to master branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 on:
   pull_request:
-    branches: [ '*' ]
+    branches: [ master ]
   merge_group:
     types: [ checks_requested ]
   workflow_dispatch: { }
