--- a/.github/workflows/merge-check.yml
+++ b/.github/workflows/merge-check.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ '*' ]
+    branches: [ master ]
   workflow_dispatch: { }
 
 name: Merge check
