--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -2,7 +2,7 @@ name: Check Conventional Commits format
 
 on:
   pull_request:
-    branches: [ '*' ]
+    branches: [ master ]
   # The action does not support running on merge_group events,
   # but if the check succeeds in the PR there is no need to check it again.
   merge_group:
