ci: Change actions to run only on changes with respect to master branch (#954)
This tries to address the same problem as
https://github.com/petgraph/petgraph/pull/952 with the same reasoning.

--- a/.github/workflows/pr-title.yml
+++ b/.github/workflows/pr-title.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     branches:
       - 0.8
+    types:
+      - opened
+      - edited
+      - synchronize
   # The action does not support running on merge_group events,
   # but if the check succeeds in the PR there is no need to check it again.
   merge_group:
