--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members  = ["crates/core", "crates/petgraph", "serialization-tests"]
+members  = ["crates/core", "crates/matrix_graph", "crates/petgraph", "serialization-tests"]
 resolver = "3"
 
 [workspace.package]
@@ -18,8 +18,9 @@ repository = "https://github.com/petgraph/petgraph"
 rust-version = "1.91"
 
 [workspace.dependencies]
-petgraph      = { path = "crates/petgraph" }
-petgraph-core = { path = "crates/core" }
+petgraph              = { path = "crates/petgraph" }
+petgraph-core         = { path = "crates/core" }
+petgraph-matrix-graph = { path = "crates/matrix_graph" }
 
 ahash             = { version = "0.7.2", default-features = false }
 bincode           = { version = "1.3.3", default-features = false }
