ci: Add MatrixGraph crate to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        crate: [petgraph, petgraph-core, petgraph-serialization-tests]
+        crate: [petgraph, petgraph-core, petgraph-serialization-tests, petgraph-matrix-graph]
         rust: [stable, beta, nightly]
         include:
           - rust: nightly
